--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,52 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+@custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
 
 @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --color-dark1: #3a3a3a;
+  --color-dark2: #2d2d2d;
+  --color-dark3: #1f1f1f;
+  --color-dark4: #050505;
+  --color-gray1: #f4f4f4;
+  --color-gray2: #e9e9e9;
+  --color-gray3: #757575;
+  --color-purple: #a445ed;
+  --color-red: #ff5252;
+  --color-green: #00b36b;
+
+  --font-inter-sans: "Inter", sans-serif;
+  --font-arabic-sans: "Noto Sans Arabic", sans-serif;
+  --font-arabic-traditional: "Scheherazade New", serif;
+
+  --shadow-custom: 0 0px 10px var(--tw-shadow-color, rgba(0, 0, 0, 0.1));
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+:root {
+  --font-arabic-selected: var(--font-arabic-naskh);
+}
+
+:lang(ar) {
+  font-family: var(--font-arabic-selected);
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-inter-sans);
+  @apply py-8 px-12 flex justify-center bg-white dark:text-white text-dark2 dark:bg-dark4 transition-colors duration-300;
+}
+
+button,
+input {
+  @apply focus:outline-none focus-visible:ring-2 focus-visible:ring-purple;
+}
+
+.fontList li {
+  @apply px-4 py-3 min-w-44 hover:text-purple cursor-pointer bg-white dark:bg-dark4 focus:outline-none focus-visible:text-purple;
+}
+
+.searchInput {
+  @apply hover:ring-2 hover:ring-purple w-full py-5 px-6 bg-gray1 dark:bg-dark3 rounded-xl text-2xl placeholder:text-dark2 dark:placeholder:text-white focus:border-purple;
+}
+
+.line {
+  @apply flex-1 h-0.5 bg-gray2 dark:bg-dark1;
 }
